--- a/taskB/index.html
+++ b/taskB/index.html
@@ -2,38 +2,46 @@
 <html>
     <head>
         <meta charset="UTF-8">
-        <meta http-equiv="X-UA-Compatible" content="IE=edge">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <title>Калькулятор</title>
         <link rel="stylesheet" href="style.css">
     </head>
     <body>
         <div class="calculator">
-            <input type="text" id="display" onkeypress="return isAllowedKey(event)" oninput="checkBrackets()">
+            <div class="display">
+                <div type="text" class="history"></div>
+                <input type="text" class="result" value="0">
+            </div>
             <div class="buttons">
-                <button class="clearAll" onclick="clearDisplay()">Очистить всё</button>
-                <button class="clear" onclick="backspace()">Стереть символ</button>
-                <button class="copy" onclick="copyToClipboard()">Копировать</button>
-                <button class="equals" onclick="calculate()">=</button>
-                <button class="number" onclick="addToDisplay('7')">7</button>
-                <button class="number" onclick="addToDisplay('8')">8</button>
-                <button class="number" onclick="addToDisplay('9')">9</button>
-                <button class="operator" onclick="addToDisplay('/')">/</button>
-                <button class="number" onclick="addToDisplay('4')">4</button>
-                <button class="number" onclick="addToDisplay('5')">5</button>
-                <button class="number" onclick="addToDisplay('6')">6</button>
-                <button class="operator" onclick="addToDisplay('*')">*</button>
-                <button class="number" onclick="addToDisplay('1')">1</button>
-                <button class="number" onclick="addToDisplay('2')">2</button>
-                <button class="number" onclick="addToDisplay('3')">3</button>
-                <button class="operator" onclick="addToDisplay('+')">+</button>
-                <button class="number" onclick="addToDisplay('0')">0</button>
-                <button class="number" onclick="addToDisplay('(')">(</button>
-                <button class="number" onclick="addToDisplay(')')">)</button>
-                <button class="operator" onclick="addToDisplay('-')">-</button>
-                <button class="decimal" onclick="addToDisplay('.')">.</button>
+                <button class="clearAll">Очистить всё</button>
+                <button class="clear">Стереть символ</button>
+                <button class="copy">Копировать</button>
+                <button class="equals">=</button>
+
+                <button class="number">7</button>
+                <button class="number">8</button>
+                <button class="number">9</button>
+                <button class="operator">/</button>
+
+                <button class="number">4</button>
+                <button class="number">5</button>
+                <button class="number">6</button>
+                <button class="operator">*</button>
+
+                <button class="number">1</button>
+                <button class="number">2</button>
+                <button class="number">3</button>
+                <button class="operator">+</button>
+
+                <button class="number">0</button>
+                <button class="number">(</button>
+                <button class="number">)</button>
+                <button class="operator">-</button>
+
+                <button class="decimal">.</button>
             </div>
         </div>
-        <script src="script.js"></script>
+        <div class="notifier"></div>
     </body>
+    <script src="script.js"></script>
 </html>
